...
                attachments.push(jsonPath);
            }
        }
        const available = await MailComposer.isAvailableAsync();
        if (available) {
            await MailComposer.composeAsync({
                recipients: ['support@appacadabra.ai'],
                subject: '[Bug Report] Appacadabra',
                body,
                attachments,
            });
        } else {
            Alert.alert(t('reportBugNoEmail'), 'support@appacadabra.ai');
...
